@@ -1,6 +1,7 @@
 0.8.2
 [Alexandr Topilski]
 - Server roles
+- Clear database
 
 0.8.1 / February 20, 2016
 [Alexandr Topilski]
