@@ -164,6 +164,17 @@ LoadDatabaseContentResponce::LoadDatabaseContentResponce(const base_class &reque
   : base_class(request) {
 }
 
+ClearDatabaseRequest::ClearDatabaseRequest(initiator_type sender, IDataBaseInfoSPtr inf,
+                                           error_type er)
+  : base_class(sender, er), inf(inf) {
+
+}
+
+ClearDatabaseResponce::ClearDatabaseResponce(const base_class& request)
+  : base_class(request) {
+
+}
+
 SetDefaultDatabaseRequest::SetDefaultDatabaseRequest(initiator_type sender, IDataBaseInfoSPtr inf,
                                                      error_type er)
   : base_class(sender, er), inf(inf) {
