@@ -123,6 +123,7 @@ namespace translations {
 
   extern const QString trLoadAndExecuteFile;
   extern const QString trLoadContOfDataBases;
+  extern const QString trRemoveAllKeys;
   extern const QString trCreateKey;
   extern const QString trViewKeysDialog;
   extern const QString trEncodeDecode;
